// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary with 1 expense correctly 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expenses
     totalling ₹
    235
  </h1>
</div>
`;

exports[`should render ExpenseSummary with multiple expenses correctly 1`] = `
<div>
  <h1>
    Viewing 
    10
     
    expenses
     totalling ₹
    2350
  </h1>
</div>
`;
